# otp-gated-decryption-service

./: .gitignore  API_TEST.md  README.md
backend/: CMakeLists.txt  README.md
backend/include/: router.h
backend/include/controllers/: decrypt_controller.h  encrypt_controller.h  health_controller.h  otp_controller.h
backend/include/crypto/: aes.h  base64.h
backend/include/models/: decrypt_request.h  decrypt_response.h  encrypt_request.h  encrypt_response.h  otp_request.h  otp_response.h
backend/include/services/: crypto_service.h  email_service.h  otp_service.h
backend/include/utils/: json_utils.h
backend/src/: main.c  router.c  server.c
backend/src/controllers/: decrypt_controller.c  encrypt_controller.c  health_controller.c  otp_controller.c
backend/src/crypto/: aes.c  base64.c
backend/src/services/: crypto_service.c  email_service.c  otp_service.c
backend/src/utlis/: json_utils.c
frontend/: README.md  package-lock.json
frontend/src/lib/components/: DecryptForm.svelte  EncryptForm.svelte  Navbar.svelte
frontend/src/lib/services/: api.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/decrypt/: +page.svelte
